tests/ui/rfcs/rfc-2396-target_feature-11/safe-calls.thir.stderr
error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:28:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:31:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:34:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:41:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:44:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:51:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:54:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:57:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:65:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:70:15
   |
LL | const _: () = sse2();
   |               ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function `sse2_and_fxsr` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:74:15
   |
LL | const _: () = sse2_and_fxsr();
   |               ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0133`.
